cmake_minimum_required(VERSION 3.10)
project(day_29)

set(CMAKE_CXX_STANDARD 17)

add_executable(ar_all_missing_numbers ar_all_missing_numbers.cpp)
add_executable(ar_two_sum ar_two_sum.cpp)
add_executable(ar_3sum ar_3sum.cpp)
add_executable(ar_longest_mountain ar_longest_mountain.cpp)
add_executable(ar_min_sub_array ar_min_sub_array.cpp)
add_executable(ar_coin_change ar_coin_change.cpp)

