cmake_minimum_required(VERSION 3.10)
project(day_38)

set(CMAKE_CXX_STANDARD 17)

add_executable(invert_bt invert_bt.cpp)
add_executable(lowest_common_ancestor_bt lowest_common_ancestor_bt.cpp)
add_executable(insert_into_bst insert_into_bst.cpp)
add_executable(sorted_arr_to_bst sorted_arr_to_bst.cpp)
add_executable(two_sum_bst two_sum_bst.cpp)
add_executable(diameter_bt diameter_bt.cpp)